# UniWork

./: .gitmodules
ADS2/: 2258082r.txt
AF2/exercise1/: exercise1.tex
AF2/exercise2/: main.tex
AI/: helpers.py  lochlomond_demo.py  report.tex  run_eval.py  run_random.py  run_rl.py  run_simple.py  uofgsocsai.py  util.py
ALG/2258082/: data6_2.txt  report.tex  run.sh
ARCH/: comparch-ex1.cabal  run.sh
ARCH/src/: TrafficLight.hs  TrafficLightRun.hs
ASP/ex1/: asp-ex1-2258082.tex
ASP/ex2/: Cargo.toml
CP/exercise1/: hint01.mzn  instLarge.dzn  instMedium.dzn  instSmall.dzn  markingGuidlines.txt  readme.txt  report.txt  teamBuilding.mzn  teamBuildingOpt.mzn
CP/exercise2/: cleanOutput.sh  markingGuidelines.txt  readme.txt
CS1Q/: CS1Q_IM_Report.tex
CS1Q/hcireport/: fbdatamining.tex
CS1Q/imreport/: CS1Q_IM_Report.tex  CS1Q_IM_Report.toc
CS1Q/query/: Query1.csv  Query1.sql  Query10.csv  Query12.sql  Query3.sql  Query4.csv  Query5.csv  Query6.csv  Query6.sql  Query8.csv
CS2/: Knapsack.asm.txt  Report.docx  test-input-1.txt  test-input-2.txt  test-input-3.txt
EXAMS/: exam.tex
EXAMS/ASP/: COMPSCI5083_2258082.tex
FP/cw-scraper/: .gitignore  ChangeLog.md  README.md  output.html  package.yaml  report.txt  stack.yaml  status.txt  stopwords.txt
NET/dnslookup/: CMakeLists.txt  dnslookup.c  graph_gen.sh  report.tex  router-4.dot  router-6.dot
OS/2258082r/: CMakeLists.txt  Makefile  Makefile.OSX  Makefile.rpi  cmake_arm_cross.txt  driver.c  driver.h  firmware.cl  test.sh  testbench.c
PARA/: report.tex
PARA/c/: CMakeLists.txt  TotientRange.c  TotientRange_orig.c
PSD/: bookreview.bib  bookreview.tex  build.sh
PSI/: good_bad_mobile.txt
SCS/: derailment.mef  floodwarningscrap.ods  maxTemp.txt  minTemp.txt  railfall.txt  report.tex  tempshit.ods
SYS/: Makefile  date.c  report.txt  run.sh  tldlist.c  tldmonitor.c
TAD/: Coursework skeleton.ipynb  report.tex
(+106 files in other folders)
