name:                 comparch-ex1
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Stuart Reilly
maintainer:           stu@reilly-family.co.uk
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable comparch-ex1
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        hydra, base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010
